# cargo_cutter

./: .gitignore  Cargo.toml  Cargo.toml.backup  README.md  build.rs  hello.py  icon.rc
config/: workspace.txt
src/: analyzer.rs  ansi_theme.rs  build_system.rs  config.rs  file_manager.rs  git_manager.rs  main.rs  menu.rs  project_creator.rs  projects.rs  python_manager.rs  self_update.rs  terminal_controller.rs
src/menu/: editor.rs  menu_build_run.rs  menu_cargo_management.rs  menu_file_management.rs  menu_git_management.rs  menu_project_creator.rs  menu_python_management.rs
src/menu/editor/: clipboard.rs  core.rs  cursor.rs  input.rs  mod.rs  render.rs
src/text/: version_changes.txt
