[package]
name = "rust_dev_terminal"
version = "1.1.2"
edition = "2021"

[dependencies]
arboard = "3.3"
chrono = "0.4"
colored = "2.1.0"
crossterm = "0.27.0"
dirs = "5.0"
once_cell = "1.19"
toml = "0.8"
zip = "0.6"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.winapi]
features = [
    "consoleapi",
    "processenv",
    "winbase",
    "wincon",
]
version = "0.3"

[build-dependencies]
winresource = "0.1"
